# llm

./: .gitignore  README.md  main.py  main_disease.py  pyproject.toml  setup.py
llm_projects/: disease_finder.py  disease_finder_v2.py  disease_finder_v3.py
llm_projects/book_summarizer/: __init__.py  book_summary.py
llm_projects/disease_finder/: __init__.py  constants.py  disease_finder_v2.py  disease_finder_v3.py  utils.py
llm_projects/healthcare/: __init__.py  admissions.py  generic_plots.py  patients.py  read_mimic.py
llm_projects/healthcare/complex_analysis/: __init__.py  admission_to_transfer.py
llm_projects/healthcare/statistical_analyses/: __init__.py  admissions.py  diagnosis_icd.py  generic_plots.py  labitem.py  omr.py  patients.py  services.py
llm_projects/healthcare/text_data_analyses/: embedding.py
